# 32F746GDISCOVERY-Project

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-flash-debug.sh  build-flash-release-size-lto.sh  build-flash-release-size.sh  clean.sh  code.code-workspace  reconfigure.sh  vscode-extensions.txt
Application/: CMakeLists.txt  README.md  app.c  app.h
Application/Screens/: home_screen.c  home_screen.h
Application/Services/: system_info.c  system_info.h
Assets/Fonts/: README.md
Assets/Images/: README.md
BSP/: CMakeLists.txt  README.md  bsp.c  bsp.h
BSP/Audio/: README.md  bsp_audio.c  bsp_audio.h
BSP/Diagnostics/: bsp_diagnostics.c  bsp_diagnostics.h
BSP/Display/: README.md  bsp_display.c  bsp_display.h
BSP/IO/: README.md  bsp_io.c  bsp_io.h
BSP/Serial/: bsp_serial.c  bsp_serial.h
BSP/Storage/: README.md  bsp_qspi.c  bsp_qspi.h  bsp_sdcard.c  bsp_sdcard.h
BSP/Touch/: README.md  bsp_touch.c  bsp_touch.h
Config/: CMakeLists.txt  FreeRTOSConfig.h  README.md  board_config.h  ffconf.h  lv_conf.h
Core/: README.md
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  runtime_hooks.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  system_stm32f7xx.c
Drivers/: README.md
Drivers/BSP/Components/wm8994/: wm8994.h
Examples/: README.md
FileSystem/: CMakeLists.txt  fs.c  fs.h
FileSystem/FatFs/: fs_fatfs_diskio.c
LVGL/: CMakeLists.txt  README.md
LVGL/Port/: README.md  lvgl_port.c  lvgl_port.h
RTOS/: CMakeLists.txt  rtos_hooks.c
Utilities/: CMakeLists.txt  README.md  app_error.c  app_error.h  app_log.c  app_log.h
cmake/: arm-none-eabi-gcc.cmake  stm32-generated.cmake
dotfiles/mac/settings/: bundles-lock.store.json  bundles.store.json  ide.store.json
dotfiles/mac/vscode/: launch.json  settings.json
